Automated fix attempt for: OS Command Injection from "cmd" Parameter on "/api (VULN-CVOD-58AF-DRDE-0D6B)